...
        placeholder={t('placeholder.email')}
        placeholderTextColor={PLACEHOLDER_COLOR}
        autoCapitalize="none"
        keyboardType="email-address"
        value={email}
        onChangeText={setEmail}
        {...e2e('login-email-input')}
      />
      <Input
        className="mb-3"
        placeholder={t('placeholder.password')}
        placeholderTextColor={PLACEHOLDER_COLOR}
        secureTextEntry
        textContentType="none"
        autoComplete="off"
        value={password}
        onChangeText={setPassword}
        {...e2e('login-password-input')}
      />

      <Pressable
        className="mb-6 self-end"
        onPress={() => router.push('/forgot-password')}
      >
...
      </Pressable>

      <Button
        className="mb-3"
        onPress={handleLogin}
        disabled={loading}
        {...e2e('login-signin-button')}
      >
        {loading ? (
          <ActivityIndicator color={ICON_ON_PRIMARY} />
        ) : (
          <Text className={buttonTextClass('default')}>
            {t('action.login')}
...
